fix : 알림 가능(알림 삭제) 수정